# bbpy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
bbpy/: __init__.py  problem.py  solver.py
bbpy/bnb/: __init__.py  bnb.py  bound.py  branch.py  node.py  search.py
bbpy/instances/: __init.py  mip.py
tests/: test_mip.py
